# pebbles

./: README.md  code_of_conduct.md  main.py  pebbles.py  pyproject.toml
.github/workflows/: build_wheels.yml  python-package.yml  python-publish.yml
src/pebbles/: countESS.py  countess.py  pebbles.py
tests/: test_pebbles.py
tests/data/: generate_test_sam.sh  map.bam  map.sam  query.fa  ref.fa
