[project]
name = "pebbles"
version = "0.1.3"
authors = [
  { name="Matthew Wakefield", email="matthew.wakefield@unimelb.edu.au" },
]
description = "A package for calling HGVS variants in single SAM/BAM alignments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pysam >= 0.20.0",
]

[project.scripts]
pebbles = "pebbles.pebbles:main"

[project.urls]
"Homepage" = "https://github.com/genomematt/pebbles"
"Bug Tracker" = "https://github.com/genomematt/pebbles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pebbles", "tests"]

